Add loading and modify user string

--- a/client/src/components/User/Game.css
+++ b/client/src/components/User/Game.css
@@ -778,3 +778,5 @@
     min-height: 5em;
   }
 }
+
+/* Attribution: ChatGPT was used for structure and organization of the code and Copilot was used to assist in writing the code. */
